refactor - Change names and styles

--- a/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.html
+++ b/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.html
@@ -1,5 +1,5 @@
 <header [formGroup]="itemForm">
-    <input type="text" formControlName="key" placeholder="key">
-    <input type="text" formControlName="value" placeholder="value">
-    <button [disabled]="!itemForm.valid" (click)="add()">add</button>
+    <input type="text" formControlName="key" placeholder="Key">
+    <input type="text" formControlName="value" placeholder="Value">
+    <button [disabled]="!itemForm.valid" (click)="add()">ADD</button>
 </header>
