--- a/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.scss
+++ b/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.scss
@@ -1,3 +1,4 @@
+$primary-color: rgb(44, 196, 210);
 :host {
     display: flex;
     flex-direction: column;
@@ -5,8 +6,34 @@
         display: flex;
         flex-direction: row;
         align-items: flex-end;
+        > input {
+            border: 2px solid rgba($primary-color, 1);
+            background-color: rgba(white, 1);
+            border-radius: 5px;
+            box-sizing: border-box;
+            font-size: 14px;
+            font-weight: 500;
+            padding: 10px 15px;
+            margin: 5px;
+            color: rgba($primary-color, 1);
+            &::placeholder {
+                color: rgba($primary-color, .5);
+            }
+            outline: 0;
+        }
         > button {
-            margin: 0 15px 16px 15px;
+            font-size: 14px;
+            font-weight: 500;
+            padding: 10px 15px;
+            margin: 5px;
+            color: rgba(white, 1);
+            border: 2px solid rgba($primary-color, 1);
+            background-color: rgba($primary-color, 1);
+            border-radius: 5px;
+            &:disabled {
+                filter: saturate(.25);
+                opacity: .5;
+            }
         }
     }
 }
