--- a/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.scss
+++ b/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.scss
@@ -6,6 +6,7 @@ $primary-color: rgb(44, 196, 210);
         display: flex;
         flex-direction: row;
         align-items: flex-end;
+        max-width: 500px;
         > input {
             border: 2px solid rgba($primary-color, 1);
             background-color: rgba(white, 1);
@@ -20,6 +21,7 @@ $primary-color: rgb(44, 196, 210);
                 color: rgba($primary-color, .5);
             }
             outline: 0;
+            min-width: 0;
         }
         > button {
             font-size: 14px;
