--- a/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.scss
+++ b/projects/suarsan/ngx-keyvalue/src/lib/ngx-keyvalue-add/ngx-keyvalue-add.component.scss
@@ -2,6 +2,7 @@ $primary-color: rgb(44, 196, 210);
 :host {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     > header {
         display: flex;
         flex-direction: row;
